--- a/countdown.html
+++ b/countdown.html
@@ -28,25 +28,23 @@ body{
 }
 
 .days {
-  background: #EF2F3C;
+  background:  #FFFDF1;
+    color: #00462A;
 }
 
 .hours {
-  background: #eeeeee;
+  background:  #FFFDF1;
   color: #00462A;
 }
 
 .minutes {
-  background: #276FBF;
-}
-
-.seconds {
-  background: #F0A202;
+  background:  #FFFDF1;
+    color: #00462A;
 }
 
 .numbers {
   font-family: 'Montserrat', sans-serif;
-  color:  #FFFDF1;
+  color:  #00462A;
   font-size: 4em;
   text-align: center;
 }
