--- a/countdown2.html
+++ b/countdown2.html
@@ -12,7 +12,7 @@ body{
 }
   
 #timer {
-  color: #FFFDF1;
+  color: #00462A;
   text-align: center;
   text-transform: uppercase;
   font-family: 'Lato', sans-serif;
@@ -29,17 +29,14 @@ body{
 
 .days {
   background: #FFFDF1;
-  color: #00462A
 }
 
 .hours {
   background: #FFFDF1;
-  color: #00462A;
 }
 
 .minutes {
   background: #FFFDF1;
-  color: #00462A
 }
 
 .numbers {
@@ -92,8 +89,6 @@ body{
         <div  id="hours" class="numbers"> </div>hours</div> 
       <div class="minutes"> 
         <div  id="minutes" class="numbers"> </div>minutes</div> 
-      <div   class="seconds"> 
-        <div id="seconds" class="numbers"> </div>seconds</div> 
       </div>
 
 </div>
@@ -101,7 +96,7 @@ body{
 </body>
 <script>
     const year = new Date().getFullYear();
-const myDate = new Date('Dec 15, 2024');
+const myDate = new Date('Dec 15, 2024 00:00:00');
 console.log(myDate);
 
 // countdown
@@ -117,13 +112,11 @@ let timer = setInterval(function() {
   let days = Math.floor(diff / (1000 * 60 * 60 * 24));
   let hours = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
   let minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
-  let seconds = Math.floor((diff % (1000 * 60)) / 1000);
 
   // display
   document.getElementById("days").innerHTML=days
   document.getElementById("hours").innerHTML=hours
   document.getElementById("minutes").innerHTML=minutes
-  document.getElementById("seconds").innerHTML=seconds
 
 
 
