--- a/countdown.html
+++ b/countdown.html
@@ -28,16 +28,19 @@ body{
 }
 
 .days {
-  background:  #FFFDF1;
+  background: #FFFDF1;
 }
 
 .hours {
-  background:  #FFFDF1;
+  background: #FFFDF1;
+  
 }
 
 .minutes {
-  background:  #FFFDF1; 
+  background: #FFFDF1;
 }
+
+
 
 .numbers {
   font-family: 'Montserrat', sans-serif;
@@ -89,8 +92,10 @@ body{
         <div  id="hours" class="numbers"> </div>hours</div> 
       <div class="minutes"> 
         <div  id="minutes" class="numbers"> </div>minutes</div> 
-     
+
       </div>
+
+</div>
 
 </body>
 <script>
@@ -117,8 +122,10 @@ let timer = setInterval(function() {
   document.getElementById("days").innerHTML=days
   document.getElementById("hours").innerHTML=hours
   document.getElementById("minutes").innerHTML=minutes
+  
 
-    
+
+
 }, 1);
 </script>
 </html>
