--- a/countdown4.html
+++ b/countdown4.html
@@ -23,8 +23,10 @@ body{
 .days, .hours, .minutes, {
   display: inline-block;
   padding: 20px;
-  width: 100px;
-height: 100px;
+  height: 85px;
+  width: 75px;
+  left: 30%;
+  top: 2%;
   border-radius: 5px;
 }
 
