Update and rename countdown5.html to countdown6.html

--- a/countdown6.html
+++ b/countdown6.html
@@ -31,23 +31,23 @@ body{
 }
 
 .days {
-  background: #FFFDF1;
+  background: #8ecae6;
 }
 
 .hours {
-  background: #FFFDF1;
-  color: #00462A;
+  background: #8ecae6;
+  color: #219ebc;
 }
 
 .minutes {
-  background: #FFFDF1;
+  background: #8ecae6;
 }
 
 
 
 .numbers {
   font-family: 'Montserrat', sans-serif;
-  color:  #00462A;
+  color:  #219ebc;
   font-size: 4em;
   text-align: center;
 }
@@ -101,7 +101,7 @@ body{
 </body>
 <script>
     const year = new Date().getFullYear();
-const myDate = new Date('Sept 18, 2024 00:00:00');
+const myDate = new Date('Sept 18, 2025 00:00:00');
 console.log(myDate);
 
 // countdown
